# rx1_ros2

./: README.md
rx1/: CMakeLists.txt  package.xml
rx1_bringup/: CMakeLists.txt  package.xml
rx1_bringup/launch/: bringup.launch.xml
rx1_bringup/scripts/: play_bags.py
rx1_description/: CMakeLists.txt  package.xml
rx1_description/launch/: record_urdf_test.launch.xml  urdf.launch.xml  urdf_test.launch.xml
rx1_description/scripts/: calc_inertia.py
rx1_description/urdf/: rx1.urdf
rx1_gazebo/: CMakeLists.txt  package.xml
rx1_gazebo/config/: rx1_control.yaml
rx1_gazebo/launch/: rx1_gazebo.launch.xml
rx1_gazebo/scripts/: controller_example.py  controller_gui_example.py
rx1_ik/: CMakeLists.txt  package.xml
rx1_ik/include/rx1_ik/: rx1_ik.hpp
rx1_ik/src/: rx1_ik.cpp
rx1_motor/: CMakeLists.txt  package.xml
rx1_motor/include/rx1_motor/: rx1_motor.hpp
rx1_motor/launch/: rx1_motor.launch.xml
rx1_motor/src/: rx1_motor.cpp
rx1_motor/src/rx1_motor/: rx1_motor.cpp
rx1_motor_lib/: CMakeLists.txt  package.xml
rx1_motor_lib/include/rx1_motor_lib/: rx1_motor_lib.hpp
rx1_motor_lib/src/: rx_motor_lib.cpp
