<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rx1</name>
  <version>0.0.0</version>
  <description>The rx1 robot package</description>
  <maintainer email="lethiic@gmail.com">lethic</maintainer>
  <maintainer email="josh@electrifiedautonomy.com">Josh Whitley</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rx1_bringup</exec_depend>
  <exec_depend>rx1_description</exec_depend>
  <exec_depend>rx1_gazebo</exec_depend>
  <exec_depend>rx1_ik</exec_depend>
  <exec_depend>rx1_motor</exec_depend>
  <exec_depend>rx1_motor_lib</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

