<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rx1_description</name>
  <version>1.2.5</version>
  <description>3D models of the rx1 for simulation and visualization</description>
  <maintainer email="lethiic@gmail.com">lethic</maintainer>
  <license>MIT</license>
  <author email="lethiic@gmail.com">lethic</author>
  <author email="josh@electrifiedautonomy.com">Josh Whitley</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
