<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rx1_gazebo</name>
  <version>1.2.5</version>
  <description>rx1 humanoid gazebo simulation</description>
  <maintainer email="lethiic@gmail.com">lethic</maintainer>
  <license>MIT</license>
  <author email="lethiic@gmail.com">lethic</author>
  <author email="josh@electrifiedautonomy.com">Josh Whitley</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

