<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rx1_ik</name>
  <version>1.2.5</version>
  <description>Inverse Kinematics of the RX1 robot</description>
  <license>MIT</license>
  <author email="lethiic@gmail.com">lethic</author>
  <author email="josh@electrifiedautonomy.com">Josh Whitley</author>
  <maintainer email="lethiic@gmail.com">lethic</maintainer>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>ik_solver_lib</depend>
  <depend>interactive_markers</depend>
  <depend>kdl_parser</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

